Bug 478146 [TSF] When dragging application window, candidate window is not moved with application window r=chenn, sr=roc