widget/src/windows/nsTextStore.h
@@ -41,6 +41,8 @@
 
 #include "nsAutoPtr.h"
 #include "nsString.h"
+#include "nsCOMPtr.h"
+#include "nsITimer.h"
 
 #include <msctf.h>
 #include <textstor.h>
@@ -149,6 +151,12 @@ public:
     return sTsfTextStore->OnSelectionChangeInternal();
   }
 
+  static void CompositionTimerCallbackFunc(nsITimer *aTimer, void *aClosure)
+  {
+    nsTextStore *ts = static_cast<nsTextStore*>(aClosure);
+    ts->OnCompositionTimer();
+  }
+
   // Returns the address of the pointer so that the TSF automatic test can
   // replace the system object with a custom implementation for testing.
   static void*    GetThreadMgr(void)
@@ -193,6 +201,7 @@ protected:
                                TF_DISPLAYATTRIBUTE* aResult);
   HRESULT  SendTextEventForCompositionString();
   HRESULT  SaveTextEvent(const nsTextEvent* aEvent);
+  nsresult OnCompositionTimer();
 
   // Document manager for the currently focused editor
   nsRefPtr<ITfDocumentMgr>     mDocumentMgr;
@@ -232,6 +241,9 @@ protected:
   // The latest text event which was dispatched for composition string
   // of the current composing transaction.
   nsTextEvent*                 mLastDispatchedTextEvent;
+  // Timer for calling ITextStoreACPSink::OnLayoutChange. This is only used
+  // during composing.
+  nsCOMPtr<nsITimer>           mCompositionTimer;
 
   // TSF thread manager object for the current application
   static ITfThreadMgr*  sTsfThreadMgr;
